# aoe2mapgenerator

./: .env  .pre-commit-config.yaml  README.md  maingenerator.ipynb  pyproject.toml  run_tests.sh  setup.py  testing.ipynb
aoe2mapgenerator/: .pypirc  0_BASIC_SCENARIO.aoe2scenario  GeneratorTest.ipynb  TestScenario.aoe2scenario  main_scenario_creator.ipynb  maingenerator.ipynb  maingenerator.py  wall-generator.ipynb
aoe2mapgenerator/map/: map.py  map_manager.py  map_object.py  map_utils.py  maplayer.py  worldpartition.py
aoe2mapgenerator/scenario/: scenario.py
aoe2mapgenerator/serializer/: serializer.py
aoe2mapgenerator/templates/: templates_manager.py
aoe2mapgenerator/triggers/: triggers.py
aoe2mapgenerator/unit_tests/: map_test.py  place_groups_test.py  voronoi_test.py
aoe2mapgenerator/units/: game_object.py  utils.py
aoe2mapgenerator/visualizer/: visualizer.py
common/constants/: constants.py
common/enums/: enum.py  object_type.py  type_enum.py
constants/: constants.py
map/: map.py  map_utils.py
scenario/: scenario.py
src/: data.json  encoder_decoder_test.ipynb  main_scenario_creator.ipynb  maingenerator.ipynb  maingenerator.py  perlin.ipynb  testing.py
src/Cpython/: knn.cp310-win_amd64.pyd
src/common/: types.py
src/generation_scripts/: decor.py  template.py  template_holder.py  village.py
src/map/: map.py  map_manager.py  map_object.py  maplayer.py
src/scenario/: gate.py  scenario.py
src/serializer/: base_serializer.py  (+2 more)
templates/: abstract_template.py  templates.py
terrain/: terrain.py
visualizer/: visualizer.py
(+73 files in other folders)
